<resources>
    <string name="app_name"></string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logo_text">Adopt Pet</string>
    <string name="selamatdatang">Selamat Datang</string>
    <string name="loginterlebihdahulu">Silahkan login terlebih dahulu</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="masukanpassword">Masukan Password</string>
    <string name="lupapassword">Lupa Password </string>
    <string name="login">Login</string>


    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_cardview">CardView</string>
    <string name="favorite">Suka</string>
    <string name="share">Share</string>
    <string name="lokasi">Lokasi</string>
</resources>